make table from server response

--- a/src/client/src/tsx/App.module.scss
+++ b/src/client/src/tsx/App.module.scss
@@ -1,7 +1,13 @@
 @use "../style/style.scss" as *;
 body {
-  background-color: black;
+	background-color: black;
 }
 .app {
-  color: white;
+	color: white;
+}
+.table {
+	td,
+	th {
+		border: solid white 1px;
+	}
 }
