added styling to main app

--- a/client/src/App/App.module.scss
+++ b/client/src/App/App.module.scss
@@ -1,6 +1,19 @@
+.main {
+	margin-top: 1rem;
+}
+
+.box {
+	border: solid gray 1px;
+	border-radius: 0.5rem;
+	box-shadow: 5px 5px 20px -10px #000000;
+	margin: 10px;
+}
+
 .headers {
 	display: flex;
 	justify-content: space-around;
+	font-size: large;
+	text-decoration: underline;
 }
 
 .tasks {
@@ -11,9 +24,21 @@
 }
 
 .shift {
-	border: solid black 1px;
-	margin: 10px;
+	@extend .box;
 	text-align: center;
 	align-items: center;
 	justify-content: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.person {
+	@extend .box;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	img {
+		max-height: 70px;
+	}
 }
