fixed a style in multiInput

--- a/client/src/components/MultiInput/MultiInput.module.scss
+++ b/client/src/components/MultiInput/MultiInput.module.scss
@@ -1,4 +1,9 @@
 .main {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
+}
+
+.inputRow {
+	display: flex;
+	flex-direction: row;
 }
