--- a/client/src/DataTable/DataTable.module.scss
+++ b/client/src/DataTable/DataTable.module.scss
@@ -26,6 +26,19 @@
 	tr:hover {
 		background-color: #ddd;
 	}
+	button {
+		width: 100%;
+		background-color: #08778a;
+		color: white;
+		padding: 14px 20px;
+		margin: 8px 0;
+		border: none;
+		border-radius: 4px;
+		cursor: pointer;
+		&:hover {
+			background-color: lighten($color: #1946d9, $amount: 10);
+		}
+	}
 }
 
 .innerTable {
