tidying up scss files and removing duplicates

--- a/client/src/components/AddTask/AddTask.module.scss
+++ b/client/src/components/AddTask/AddTask.module.scss
@@ -1,38 +1,1 @@
-* {
-	transition: all 0.5s ease;
-}
-.main {
-	margin: auto;
-	margin-top: 1rem;
-	width: 70%;
-	text-transform: capitalize;
-	font-size: medium;
-	label {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: space-between;
-	}
-	input[type="submit"] {
-		width: 100%;
-		background-color: #08778a;
-		color: white;
-		padding: 14px 20px;
-		margin: 8px 0;
-		border: none;
-		border-radius: 4px;
-		cursor: pointer;
-		&:hover {
-			background-color: lighten($color: #1946d9, $amount: 10);
-		}
-	}
-	input {
-		width: 100%;
-		padding: 12px 20px;
-		margin: 8px 0;
-		display: inline-block;
-		border: 1px solid #ccc;
-		border-radius: 4px;
-		box-sizing: border-box;
-	}
-}
+@use "../../style/form.scss";
