--- a/client/src/components/TableManager/TableManager.module.scss
+++ b/client/src/components/TableManager/TableManager.module.scss
@@ -1,3 +1,5 @@
+@use "../../style/base";
+
 .main {
 	display: flex;
 	flex-direction: column;
@@ -12,15 +14,7 @@
 	border-bottom: solid #ddd 1px;
 	gap: 1rem;
 	a {
-		text-align: center;
-		flex-grow: 1;
-		color: white;
-		border: solid #ddd 1;
-		border-radius: 0.5rem;
-		background-color: #08778a;
+		@extend %button;
 		padding: 0.7rem;
-		&:hover {
-			background-color: #0c9fb9;
-		}
 	}
 }
