--- a/client/src/style/_base.scss
+++ b/client/src/style/_base.scss
@@ -22,3 +22,10 @@
 	border-radius: 4px;
 	box-sizing: border-box;
 }
+
+%box {
+	border: solid gray 1px;
+	border-radius: 0.5rem;
+	box-shadow: 5px 5px 20px -10px #000000;
+	margin: 10px;
+}
