--- a/client/src/components/DataTable/DataTable.module.scss
+++ b/client/src/components/DataTable/DataTable.module.scss
@@ -1,3 +1,5 @@
+@use "../../style/base";
+
 .main {
 	margin: auto;
 	min-width: 80%;
@@ -27,17 +29,7 @@
 		background-color: #ddd;
 	}
 	button {
-		width: 100%;
-		background-color: #08778a;
-		color: white;
-		padding: 14px 20px;
-		margin: 8px 0;
-		border: none;
-		border-radius: 4px;
-		cursor: pointer;
-		&:hover {
-			background-color: lighten($color: #1946d9, $amount: 10);
-		}
+		@extend %button;
 	}
 }
 
