--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
+:root {
+	font-family: "Roboto", sans-serif;
+}
+
 * {
 	transition: all 0.5s ease;
 }
