--- a/client/src/components/MainNavbar/MainNavbar.module.scss
+++ b/client/src/components/MainNavbar/MainNavbar.module.scss
@@ -1,7 +1,11 @@
 .navbar {
+	text-transform: capitalize;
 	background-color: aliceblue;
 	display: flex;
 	flex-direction: row;
 	padding: 10px;
 	gap: 10px;
+	p {
+		margin: 0;
+	}
 }
