added better controls for setting start and end time

--- a/client/src/components/TasksView/TasksView.module.scss
+++ b/client/src/components/TasksView/TasksView.module.scss
@@ -1,13 +1,18 @@
 @use "../../style/form.scss";
+@use "../../style/base";
 .times {
 	@extend %box;
 	display: flex;
 	padding: 1rem;
 	margin: 2rem;
 	justify-content: space-evenly;
-	// gap: 1rem;
+	align-items: center;
 	input {
 		@extend %input;
+		width: auto;
+	}
+	button {
+		@extend %button;
 		width: auto;
 	}
 }
