--- a/client/src/components/MainNavbar/MainNavbar.module.scss
+++ b/client/src/components/MainNavbar/MainNavbar.module.scss
@@ -1,10 +1,18 @@
 .navbar {
+	font-size: medium;
+	font-weight: 700;
 	text-transform: capitalize;
-	background-color: aliceblue;
+	border-radius: 1rem;
+	background-color: #08778a;
 	display: flex;
 	flex-direction: row;
-	padding: 10px;
-	gap: 10px;
+	padding: 1rem;
+	gap: 0.5rem;
+	a {
+		padding-right: 0.5rem;
+		border-right: solid gray 1px;
+		color: white;
+	}
 	p {
 		margin: 0;
 	}
