reduce form width

--- a/client/src/style/form.scss
+++ b/client/src/style/form.scss
@@ -1,9 +1,9 @@
 @use "base";
 .main {
+	// max-width: 70%;
 	text-transform: capitalize;
 	margin: auto;
 	margin-top: 1rem;
-	width: 70%;
 	text-transform: capitalize;
 	font-size: medium;
 	label {
