--- a/client/src/components/MainNavbar/MainNavbar.module.scss
+++ b/client/src/components/MainNavbar/MainNavbar.module.scss
@@ -2,12 +2,16 @@
 	font-size: medium;
 	font-weight: 700;
 	text-transform: capitalize;
-	border-radius: 1rem;
+	border-radius: 0.5rem;
 	background-color: #08778a;
 	display: flex;
 	flex-direction: row;
 	padding: 1rem;
 	gap: 0.5rem;
+	img {
+		mix-blend-mode: multiply;
+		height: 1rem;
+	}
 	a {
 		padding-right: 0.5rem;
 		border-right: solid gray 1px;
