--- a/client/src/components/MainNavbar/MainNavbar.module.scss
+++ b/client/src/components/MainNavbar/MainNavbar.module.scss
@@ -1,9 +1,10 @@
+@use "../../style/base";
 .navbar {
 	font-size: medium;
 	font-weight: 700;
 	text-transform: capitalize;
 	border-radius: 0.5rem;
-	background-color: #08778a;
+	background-color: base.$medium;
 	display: flex;
 	flex-direction: row;
 	padding: 1rem;
