--- a/client/src/style/_base.scss
+++ b/client/src/style/_base.scss
@@ -1,8 +1,13 @@
+$light: #bccad6;
+$medium: #8d9db6;
+$strong: #667292;
+$cream: #f1e3dd;
+
 %button {
 	text-transform: capitalize;
 	text-align: center;
 	width: 100%;
-	background-color: #08778a;
+	background-color: $strong;
 	color: white;
 	padding: 1rem;
 	margin: 1rem 0;
@@ -10,7 +15,7 @@
 	border-radius: 0.5rem;
 	cursor: pointer;
 	&:hover {
-		background-color: lighten($color: #1946d9, $amount: 10);
+		background-color: $medium;
 	}
 }
 
@@ -19,13 +24,13 @@
 	padding: 12px 20px;
 	margin: 8px 0;
 	display: inline-block;
-	border: 1px solid #ccc;
+	border: 1px solid #aaa;
 	border-radius: 4px;
 	box-sizing: border-box;
 }
 
 %box {
-	border: solid gray 1px;
+	border: solid #aaa 1px;
 	border-radius: 0.5rem;
 	box-shadow: 5px 5px 20px -10px #000000;
 	margin: 10px;
