--- a/client/src/components/TableManager/TableManager.module.scss
+++ b/client/src/components/TableManager/TableManager.module.scss
@@ -9,7 +9,7 @@
 .navbar {
 	display: flex;
 	width: 100%;
-	padding: 0.7rem;
+	padding: 0.7rem 0;
 	justify-content: space-around;
 	border-bottom: solid #aaa 1px;
 	gap: 1rem;
