added background image

--- a/client/src/components/DetailsList/DetailsList.module.scss
+++ b/client/src/components/DetailsList/DetailsList.module.scss
@@ -3,8 +3,10 @@
 	margin: auto;
 	min-width: 30%;
 	details {
+		margin: 0.1rem;
+		background-color: base.$light;
 		border: 1px solid #aaa;
-		border-radius: 0.3rem;
+		border-radius: 1rem;
 		padding: 0.5em 0.5em 0;
 		summary {
 			font-weight: bold;
