--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -1,7 +1,12 @@
+@use "./base";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap");
 
 :root {
 	font-family: "Roboto", sans-serif;
+}
+
+body {
+	background: center/50% url("../media/images/camouflage\ seamless.jpg") fixed;
 }
 
 * {
