--- a/client/src/components/App/App.module.scss
+++ b/client/src/components/App/App.module.scss
@@ -6,6 +6,11 @@
 		justify-content: space-around;
 		font-size: large;
 		text-decoration: underline;
+		div {
+			background-color: base.$cream;
+			padding: 0.8rem 8rem;
+			border-radius: 0.3rem;
+		}
 	}
 	.column {
 		display: flex;
@@ -21,6 +26,8 @@
 				overflow: hidden;
 				.person {
 					@extend %box;
+					padding: 0.3rem;
+					gap: 0.3rem;
 					background-color: white;
 					display: flex;
 					flex-direction: row;
