--- a/client/src/components/DetailsList/DetailsList.module.scss
+++ b/client/src/components/DetailsList/DetailsList.module.scss
@@ -19,9 +19,11 @@
 				border-bottom: 1px solid #aaa;
 				margin-bottom: 0.5em;
 			}
+			background-color: white;
 		}
 		ul {
 			padding: 0 2rem;
+			margin: 0;
 		}
 	}
 	.buttons {
