--- a/client/src/components/App/App.module.scss
+++ b/client/src/components/App/App.module.scss
@@ -8,8 +8,10 @@
 		text-decoration: underline;
 		div {
 			background-color: base.$cream;
-			padding: 0.8rem 8rem;
+			padding: 0.8rem;
+			min-width: 20%;
 			border-radius: 0.3rem;
+			text-align: center;
 		}
 	}
 	.column {
@@ -19,13 +21,16 @@
 			.shift {
 				background-color: base.$light;
 				@extend %box;
+				margin: 0.2rem;
 				display: flex;
 				flex-direction: row;
 				flex-wrap: wrap;
 				text-align: center;
 				overflow: hidden;
+				gap: 1rem;
 				.person {
 					@extend %box;
+					margin: 0;
 					padding: 0.3rem;
 					gap: 0.3rem;
 					background-color: white;
