change background to plain color

--- a/client/src/style/_base.scss
+++ b/client/src/style/_base.scss
@@ -1,7 +1,7 @@
 $light: #bccad6;
 $medium: #8d9db6;
 $strong: #667292;
-$cream: #f1e3dd;
+$cream: #f2f2f2;
 
 %button {
 	text-transform: capitalize;
