--- a/client/src/components/App/App.module.scss
+++ b/client/src/components/App/App.module.scss
@@ -7,7 +7,7 @@
 		font-size: large;
 		text-decoration: underline;
 		div {
-			background-color: base.$cream;
+			background-color: base.$light;
 			padding: 0.8rem;
 			min-width: 20%;
 			border-radius: 0.3rem;
@@ -24,12 +24,15 @@
 				margin: 0.2rem;
 				display: flex;
 				flex-direction: row;
+				align-items: center;
+				justify-content: center;
 				flex-wrap: wrap;
 				text-align: center;
 				overflow: hidden;
 				gap: 1rem;
 				.person {
 					@extend %box;
+					height: fit-content;
 					margin: 0;
 					padding: 0.3rem;
 					gap: 0.3rem;
