--- a/client/src/components/DetailsList/DetailsList.module.scss
+++ b/client/src/components/DetailsList/DetailsList.module.scss
@@ -2,6 +2,9 @@
 .main {
 	margin: auto;
 	min-width: 30%;
+	@media only screen and (max-width: 600px) {
+		min-width: 70%;
+	}
 	details {
 		margin: 0.1rem;
 		background-color: base.$light;
