--- a/client/src/components/App/App.module.scss
+++ b/client/src/components/App/App.module.scss
@@ -1,6 +1,16 @@
 @use "../../style/base";
 .main {
 	margin-top: 1rem;
+	overflow-x: scroll;
+	.headers,
+	.column {
+		max-width: 1000px;
+		min-width: 600px;
+		margin: auto;
+		& > div {
+			margin: 0 1rem;
+		}
+	}
 	.headers {
 		display: flex;
 		justify-content: space-around;
