--- a/client/src/components/App/App.module.scss
+++ b/client/src/components/App/App.module.scss
@@ -1,81 +1,80 @@
 @use "../../style/base";
-.main {
-	margin-top: 1rem;
-	overflow-x: scroll;
-	.headers,
-	.column {
-		max-width: 1000px;
-		min-width: 600px;
-		margin: auto;
-		& > div {
-			margin: 0 1rem;
+.container {
+	.main {
+		margin-left: 4rem;
+		margin-top: 1rem;
+		overflow-x: scroll;
+		.headers,
+		.column {
+			max-width: 1000px;
+			min-width: 600px;
+			margin: auto;
+			& > div {
+				margin: 0 1rem;
+			}
 		}
-	}
-	.headers {
-		display: flex;
-		justify-content: space-around;
-		font-size: large;
-		text-decoration: underline;
-		div {
-			background-color: base.$light;
-			padding: 0.8rem;
-			min-width: 20%;
-			border-radius: 0.3rem;
-			text-align: center;
-		}
-	}
-	.column {
-		display: flex;
-		.task {
-			flex-grow: 1;
-			.shift {
+		.headers {
+			display: flex;
+			justify-content: space-around;
+			font-size: large;
+			text-decoration: underline;
+			div {
 				background-color: base.$light;
-				@extend %box;
-				margin: 0.2rem;
-				display: flex;
-				flex-direction: row;
-				align-items: center;
-				justify-content: center;
-				flex-wrap: wrap;
+				padding: 0.8rem;
+				min-width: 20%;
+				border-radius: 0.3rem;
 				text-align: center;
-				overflow: hidden;
-				gap: 1rem;
-				.person {
+			}
+		}
+		.column {
+			display: flex;
+			.task {
+				flex-grow: 1;
+				.shift {
 					@extend %box;
-					height: fit-content;
-					margin: 0;
-					padding: 0.3rem;
-					gap: 0.3rem;
-					background-color: white;
+					background-color: base.$light;
+					margin: 0.2rem;
 					display: flex;
-					flex-direction: row;
-					align-items: center;
+					flex-direction: column;
+					text-align: center;
+					overflow: scroll;
+					gap: 0.2rem;
+					border: solid #aaa 1px;
+					border-style: dashed;
+					.person {
+						@extend %box;
+						height: fit-content;
+						margin: 0;
+						padding: 0.3rem;
+						gap: 0.3rem;
+						background-color: white;
+						display: flex;
+						flex-direction: row;
+						align-items: center;
+					}
 				}
 			}
 		}
 	}
-}
-.container {
-	display: flex;
-	flex-direction: row;
-	.main {
-		flex-grow: 1;
-	}
-}
-.timeline {
-	margin-top: 3rem;
-	margin-left: 1rem;
-	width: 5rem;
-	height: 100vh;
-	.time {
-		height: 3rem;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		hr {
-			flex-grow: 1;
-			border: none;
-			border-bottom: solid #aaa 1px;
+	.timeline {
+		margin-top: 3rem;
+		margin-left: 1rem;
+		width: 5rem;
+		height: 100vh;
+		width: 100vw;
+		position: absolute;
+		top: 3.3rem;
+		z-index: -1;
+		.time {
+			height: 3.1rem;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			hr {
+				flex-grow: 1;
+				border: none;
+				border-bottom: solid #aaa 1px;
+			}
 		}
 	}
 }
