change form widths

--- a/client/src/style/form.scss
+++ b/client/src/style/form.scss
@@ -5,7 +5,8 @@
 	border: solid #ddd 1px;
 	border-radius: 0.5rem;
 	padding: 1rem;
-	max-width: 20rem;
+	max-width: 30rem;
+	min-width: 30%;
 	text-transform: capitalize;
 	margin: auto;
 	margin-top: 1rem;
