--- a/client/src/components/MainNavbar/MainNavbar.module.scss
+++ b/client/src/components/MainNavbar/MainNavbar.module.scss
@@ -1,6 +1,6 @@
 @use "../../style/base";
 .navbar {
-	font-size: medium;
+	font-size: 1.1rem;
 	font-weight: 700;
 	text-transform: capitalize;
 	border-radius: 0.5rem;
@@ -8,13 +8,12 @@
 	display: flex;
 	flex-direction: row;
 	padding: 1rem;
-	gap: 0.5rem;
+	gap: 1rem;
 	img {
-		mix-blend-mode: multiply;
-		height: 1rem;
+		height: 1.1rem;
 	}
 	a {
-		padding-right: 0.5rem;
+		padding-right: 1rem;
 		border-right: solid gray 1px;
 		color: white;
 	}
