--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -1,8 +1,8 @@
 @use "./base";
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap");
 
 :root {
-	font-family: "Roboto", sans-serif;
+	font-family: "Open Sans", sans-serif;
 }
 
 body {
