removed app headers border and moved timeline down

--- a/client/src/components/App/App.module.scss
+++ b/client/src/components/App/App.module.scss
@@ -20,6 +20,7 @@
 			margin-bottom: 0.3rem;
 			div {
 				@extend %box;
+				border: none;
 				background-color: base.$light;
 				padding: 0.8rem;
 				min-width: 20%;
@@ -57,7 +58,7 @@
 		}
 	}
 	.timeline {
-		margin-top: 3.5rem;
+		margin-top: 4rem;
 		margin-left: 1rem;
 		width: 5rem;
 		height: 100vh;
