--- a/client/src/components/App/App.module.scss
+++ b/client/src/components/App/App.module.scss
@@ -43,9 +43,12 @@
 					border: solid #aaa 1px;
 					border-style: dashed;
 					.person {
+						&:first-child {
+							margin-top: 0.1rem;
+						}
 						@extend %box;
 						height: fit-content;
-						margin: 0;
+						margin: 0 1rem;
 						padding: 0.3rem;
 						gap: 0.3rem;
 						background-color: white;
