--- a/client/src/style/_base.scss
+++ b/client/src/style/_base.scss
@@ -33,5 +33,5 @@ $cream: #f2f2f2;
 	border: solid #aaa 1px;
 	border-radius: 0.5rem;
 	box-shadow: 5px 5px 10px -8px #000000;
-	margin: 10px;
+	margin: 1rem;
 }
