--- a/client/src/components/MainNavbar/MainNavbar.module.scss
+++ b/client/src/components/MainNavbar/MainNavbar.module.scss
@@ -7,10 +7,12 @@
 	background-color: base.$medium;
 	display: flex;
 	flex-direction: row;
+	align-items: baseline;
 	padding: 1rem;
 	gap: 1rem;
 	img {
-		height: 1.1rem;
+		height: 1rem;
+		transform: scale(250%) translate(20px, -3px);
 	}
 	span {
 		padding-right: 1rem;
