--- a/client/src/style/form.scss
+++ b/client/src/style/form.scss
@@ -23,6 +23,7 @@
 	}
 	input[type="submit"] {
 		@extend %button;
+		background-color: adjust-hue($color: base.$strong, $degrees: 180);
 	}
 	select {
 		@extend %input;
