--- a/client/src/components/App/App.module.scss
+++ b/client/src/components/App/App.module.scss
@@ -50,7 +50,7 @@
 					display: flex;
 					flex-direction: column;
 					text-align: center;
-					overflow: scroll;
+					overflow-y: auto;
 					gap: 0.2rem;
 					border: solid #aaa 1px;
 					border-style: dashed;
